--- a/GitHubAwards/Base.lproj/Main.storyboard
+++ b/GitHubAwards/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                                         <rect key="frame" x="0.0" y="1" width="320" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1xN-Qi-pZb" id="Qdl-P5-WI9">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dA6-6L-cJl" customClass="LanguageImageView" customModule="GitHubAwards" customModuleProvider="target">
@@ -245,11 +245,11 @@
                         <viewControllerLayoutGuide type="bottom" id="bTg-G4-14n"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="lTW-Fe-AUg">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="158" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="AYy-DI-0AL">
-                                <rect key="frame" x="0.0" y="65" width="320" height="302"/>
+                                <rect key="frame" x="0.0" y="65" width="320" height="415"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="OMd-ur-YDH" userLabel="Header">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="117"/>
@@ -492,7 +492,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nlg-ki-E6p" customClass="GithubLoadingView" customModule="GitHubAwards" customModuleProvider="target">
-                                <rect key="frame" x="115" y="171" width="90" height="90"/>
+                                <rect key="frame" x="115" y="228" width="90" height="90"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="90" id="PII-bG-QUV"/>
@@ -891,10 +891,10 @@
                                 </containerView>
                             </tableView>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fsz-pM-Mev" userLabel="Paginator Container">
-                                <rect key="frame" x="300" y="299" width="10" height="30"/>
+                                <rect key="frame" x="290" y="289" width="20" height="40"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Et7-J8-E82">
-                                        <rect key="frame" x="5" y="10" width="0.0" height="0.0"/>
+                                        <rect key="frame" x="10" y="15" width="0.0" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -905,8 +905,8 @@
                                     <constraint firstItem="Et7-J8-E82" firstAttribute="centerY" secondItem="Fsz-pM-Mev" secondAttribute="centerY" constant="-5" id="JEA-LU-XCJ"/>
                                     <constraint firstItem="Et7-J8-E82" firstAttribute="centerX" secondItem="Fsz-pM-Mev" secondAttribute="centerX" id="Jt2-3n-8by"/>
                                     <constraint firstAttribute="width" constant="50" id="MWy-w6-dNB"/>
-                                    <constraint firstAttribute="height" constant="30" id="QRD-Pb-uV8"/>
-                                    <constraint firstAttribute="width" secondItem="Et7-J8-E82" secondAttribute="width" constant="10" id="eef-7C-1Bv"/>
+                                    <constraint firstAttribute="height" constant="40" id="QRD-Pb-uV8"/>
+                                    <constraint firstAttribute="width" secondItem="Et7-J8-E82" secondAttribute="width" constant="20" id="eef-7C-1Bv"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -989,22 +989,22 @@
                                 </containerView>
                             </tableView>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xXI-V9-acO" userLabel="Paginator Container">
-                                <rect key="frame" x="300" y="308" width="10" height="30"/>
+                                <rect key="frame" x="241" y="298" width="69" height="40"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1qr-3q-rhl">
-                                        <rect key="frame" x="5" y="10" width="0.0" height="0.0"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1/1231" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1qr-3q-rhl">
+                                        <rect key="frame" x="10" y="5" width="49" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.85844691930000006" green="0.85844691930000006" blue="0.85844691930000006" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.6736515126" green="0.6736515126" blue="0.6736515126" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="1qr-3q-rhl" firstAttribute="centerY" secondItem="xXI-V9-acO" secondAttribute="centerY" constant="-5" id="3hk-Dh-2Dj"/>
                                     <constraint firstAttribute="width" constant="50" id="4Cd-bL-mQU"/>
                                     <constraint firstItem="1qr-3q-rhl" firstAttribute="centerX" secondItem="xXI-V9-acO" secondAttribute="centerX" id="bL2-6e-iNo"/>
-                                    <constraint firstAttribute="height" constant="30" id="bXG-oz-87u"/>
-                                    <constraint firstAttribute="width" secondItem="1qr-3q-rhl" secondAttribute="width" constant="10" id="wRS-hA-G3A"/>
+                                    <constraint firstAttribute="height" constant="40" id="bXG-oz-87u"/>
+                                    <constraint firstAttribute="width" secondItem="1qr-3q-rhl" secondAttribute="width" constant="20" id="wRS-hA-G3A"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -1090,22 +1090,22 @@
                                 </containerView>
                             </tableView>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pbi-y5-fOy" userLabel="Paginator Container">
-                                <rect key="frame" x="300" y="308" width="10" height="30"/>
+                                <rect key="frame" x="290" y="298" width="20" height="40"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ETV-07-9p2">
-                                        <rect key="frame" x="5" y="10" width="0.0" height="0.0"/>
+                                        <rect key="frame" x="10" y="15" width="0.0" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.85844691930000006" green="0.85844691930000006" blue="0.85844691930000006" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.6736515126" green="0.6736515126" blue="0.6736515126" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="1OP-pj-edt"/>
                                     <constraint firstItem="ETV-07-9p2" firstAttribute="centerX" secondItem="Pbi-y5-fOy" secondAttribute="centerX" id="69Z-2I-ncp"/>
-                                    <constraint firstAttribute="height" constant="30" id="LO8-LL-Lh3"/>
+                                    <constraint firstAttribute="height" constant="40" id="LO8-LL-Lh3"/>
                                     <constraint firstItem="ETV-07-9p2" firstAttribute="centerY" secondItem="Pbi-y5-fOy" secondAttribute="centerY" constant="-5" id="Pei-Dt-h7Q"/>
-                                    <constraint firstAttribute="width" secondItem="ETV-07-9p2" secondAttribute="width" constant="10" id="UFI-T3-Cs6"/>
+                                    <constraint firstAttribute="width" secondItem="ETV-07-9p2" secondAttribute="width" constant="20" id="UFI-T3-Cs6"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -1161,6 +1161,6 @@
         <image name="X" width="40" height="41"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="82b-ih-YU7"/>
+        <segue reference="fYe-Ak-nVm"/>
     </inferredMetricsTieBreakers>
 </document>
